.kube/cr-gw-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cr-gw-ingress
  namespace: brig
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dir-cr-gw.gccollab.ca
    secretName: cr-gw-secret
  rules:
  - host: dir-cr-gw.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: brigade-brigade-cr-gw
          servicePort: 80
